# openarm-synthetic-ds

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
configs/cameras/: molmoact2_tabletop_fitted.json
configs/sources/: agibot.yaml  agibot_derived_fallback.yaml  droid.yaml  hiw500.yaml  molmoact2_tabletop.yaml  rh20t_franka.yaml  robomind_agilex_3rgb.yaml  unifolm.yaml
docs/: CROSS_DATASET_BENCHMARK.md  PROJECT.md
examples/: calibration_points.json  camera_opencv.json
patches/: urlab-multi-worker-ports.patch
scripts/: acquire_one_hour.py  align_benchmark_renders.py  build_cross_dataset_benchmark.py  compose_benchmark_outputs.py  evaluate_cross_dataset_benchmark.py  import_urlab_asset.sh  package_urlab.sh  prepare_benchmark_masks.py  prepare_benchmark_scenes.py  prepare_benchmark_supplement.py  run_minimax_remover.py  setup_urlab.sh
src/openarm_retarget/: __init__.py  agibot_archive.py  ai_masks.py  audit.py  batch.py  blender_driver.py  calibration.py  camera.py  cli.py  constants.py  download.py  export.py  filters.py  gripper.py  gripper_validation.py  ik.py  ik_compare.py  media.py  model.py  official_ik.py  poses.py  presets.py  raytrace.py  registration.py  retarget.py  robotseg.py  schema.py  style_vace.py  urlab.py  viewer.py
src/openarm_retarget/adapters/: __init__.py  agibot.py  lerobot.py
tests/: conftest.py  test_agibot.py  test_agibot_archive.py  test_agibot_camera.py  test_batch.py  test_benchmark_alignment.py  test_benchmark_build.py  test_benchmark_compose.py  test_benchmark_evaluate.py  test_calibration.py  test_camera.py  test_download.py  test_export.py  test_gripper.py  test_hiw_mobile_base.py  test_ik.py  test_lerobot_variants.py  test_media.py  test_official_ik.py  test_poses.py  test_raytrace.py  test_registration.py  test_retarget.py  test_schema.py  test_single_arm.py  test_style_vace.py  test_urlab.py
unreal/OpenArmRenderer/: OpenArmRenderer.uproject  README.md
unreal/OpenArmRenderer/Config/: DefaultEngine.ini  DefaultGame.ini
unreal/OpenArmRenderer/Source/: OpenArmRenderer.Target.cs  OpenArmRendererEditor.Target.cs
unreal/OpenArmRenderer/Source/OpenArmRenderer/: OpenArmRenderer.Build.cs
unreal/OpenArmRenderer/Source/OpenArmRenderer/Private/: OpenArmCaptureController.cpp  OpenArmRenderer.cpp
unreal/OpenArmRenderer/Source/OpenArmRenderer/Public/: OpenArmCaptureController.h
