[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openarm-retarget"
version = "0.2.0"
description = "Retarget heterogeneous robot datasets to OpenArm 2.0"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
  "h5py>=3.12",
  "huggingface-hub>=0.30",
  "mujoco>=3.3",
  "numpy>=2.0",
  "opencv-python-headless>=4.10",
  "pyarrow>=19",
  "pyyaml>=6.0",
  "scipy>=1.15",
  "typer>=0.15",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.11"]
media-ai = [
  "pillow>=11",
  "torch==2.9.1",
  "torchvision==0.24.1",
  "transformers>=4.56",
]
minimax = [
  "accelerate>=1.8",
  "diffusers>=0.33,<0.39",
  "einops>=0.8",
  "omegaconf>=2.3",
  "pillow>=11",
  "torch==2.9.1",
]
robotseg = [
  "hydra-core>=1.3",
  "iopath>=0.1.10",
  "natsort>=8.4",
  "pillow>=11",
  "timm>=1.0",
  "torch==2.9.1",
  "torchvision==0.24.1",
  "tqdm>=4.67",
]

[project.scripts]
openarm-retarget = "openarm_retarget.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/openarm_retarget"]

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/configs",
  "/docs",
  "/examples",
  "/pyproject.toml",
  "/scripts",
  "/src",
  "/tests",
  "/uv.lock",
]
exclude = ["/data", "/dist", "/outputs", "/vendor", "/.venv"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
extend-exclude = ["data", "dist", "outputs", "vendor"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
